Revert "cookbook_path の指定方法を変更"
This reverts commit 21051b6e2a6faa9ee77483951f03158b394594d4.

--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -18,6 +18,6 @@ suites:
   attributes:
     chef:
       _FILE_CACHE_PATH: '/tmp/chef'
-      _COOKBOOK_PATH: '/tmp/chef-repo/cookbooks, /tmp/chef-repo/site-cookbooks'
+      _COOKBOOK_PATH: ['/tmp/chef-repo/cookbooks', '/tmp/chef-repo/site-cookbooks']
       _ROLE_PATH: '/tmp/chef-repo/roles'
       _DATABAG_PATH: '/tmp/chef-repo/data_bags'
